force-app/main/default/objects/Shelf_Stock__c/Shelf_Stock__c.object-meta.xml
<CustomObject>
    <label>Shelf Stock</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Shelf Stock No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shelf Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>