force-app/main/default/objects/Shelf_Stock__c/fields/Comments_Compition_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Comments_Compition_Remarks__c</fullName>
    <label>Comments /Compition Remarks</label>
    <type>TextArea</type>
</CustomField>