force-app/main/default/objects/Shelf_Stock__c/fields/Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Quantity__c</fullName>
    <label>Sales Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>