force-app/main/default/objects/Shelf_Stock__c/fields/skuName__c.field-meta.xml
<CustomField>
    <fullName>skuName__c</fullName>
    <formula>SKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>skuName</label>
    <type>Text</type>
</CustomField>