force-app/main/default/objects/Shelf_Stock__c/fields/Total_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock_Level__c</fullName>
    <label>Total Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>