force-app/main/default/objects/Shelf_Stock__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Shelf Stocks</relationshipLabel>
    <relationshipName>Shelf_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>